# gpu-temp-watch

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GpuTempWatch-Tray.ps1  GpuTempWatch.ps1  PLAN.md  README.md  README.ru.md  RUST_PLAN.md  Setup-GpuTempWatch.ps1  StartGpuTempWatch.vbs  create_icon.py  create_temperature_icons.py
.claude/: settings.local.json
scripts/: README.md  create_dev_icons.bat  create_icons.py
src/: app_paths.rs  autostart.rs  config.rs  gui.rs  logger_service.rs  logging.rs  main.rs  monitor.rs  notifications.rs  tray.rs  tray_new.rs  universal_logger.rs  web_server.rs
web/: index.html
