[package]
name = "gpu-temp-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nvml-wrapper = "0.11"
trayicon = "0.3"
winrt-notification = "0.5"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
