[package]
name = "gpu-temp-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nvml-wrapper = "0.11"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
tray-icon = "0.17"
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
futures-util = "0.3"
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "ApplicationModel_Background",
    "UI_Notifications",
    "Data_Xml_Dom"
] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
